# PSPL_CMS_GSESoftware

./: .env  .gitignore  .gitmodules  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: build.yml
Bang Bang Boom Box/Refrences/fuck/: fuck.ino
cmdnet/: cmdnet.py  internal.py
cmdnet-mock-client/: main.py
cmdnet-server/: Dockerfile  Dockerfile.dev  app.py
cmdnet-server/cmdnet/: __init__.py  cmdnet.py
cmdnet-v2-cli/: main.py
cmdnet-v2-server/: Dockerfile  app.py  internal.py
commandnet-cli/: curtime.py  main.py  shell.lark
commandnet-server/: app.py  app.pyold  pyproject.toml
commandnet-tui/: main.py
configuration-ui/: .eslintignore  .gitignore  .prettierrc  package-lock.json  package.json  svelte.config.js  tsconfig.json
configuration-ui/grafana/: dashboard.jsonnet
configuration-ui/src/: app.html
configuration-ui/static/: app.css
conversion/: sensor.py
grafanalib-test/: main.py
pocketbase/: Dockerfile
pocketbase/migrations/: 1696231422_created_userItems.js  1696231467_created_projects.js  1696231527_created_dashboardLayouts.js  1696232690_created_chartColors.js
pspiechart/: .env  Dockerfile  Dockerfile.dev  README.md  index.html  next.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
pspiechart/common/: Message.ts
pspiechart/components/: Banner.tsx  Contexts.tsx  Dashboard.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  Panel.tsx  ReactTimeChart.tsx  Sidebar.tsx  TimeChartPlot.tsx  TimePlot.tsx  UPlotChart.tsx  Widget.tsx
pspiechart/contexts/: FullscreenContext.ts  WebsocketContext.ts
pspiechart/handlers/: DataSourceHandler.ts  WebsocketHandler.ts
pspiechart/lib/: dashboard-store.ts
pspiechart/pages/: _app.tsx  index.tsx
pspiechart/server/: server.ts  tsconfig.json
pspiechart/src/: App.tsx  Login.tsx  app.html  app.scss  global-context.tsx  globals.css  io-context.tsx  main.tsx  not-found.tsx  variables.scss
pspiechart/styles/: App.scss  Bootstrap.scss  Custom.scss  Dashboard.module.scss  Layout.module.scss  Sidebar.module.scss
pspiechart/types/: DashboardInterfaces.ts  DataInterfaces.ts
sensornet/: device.py  main.py  packet.py
sensornet-decode-server/: test-influx.py
sensornet-decode-server/src/: datapoint.py  device.py  packet.py  packets.py  sensor.py  struct_decoder.py
sensornet-server/: .gitignore  .notenv  Dockerfile  Dockerfile.dev  README.md  index.ts  package-lock.json  package.json  packets.ts  test.c  test.py  tsconfig.json
sensornet-server-cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  test.py
sensornet-server-cpp/include/: SensorModel.hpp  globals.hpp  sensor-store.hpp
sensornet-server-cpp/src/: calibration.cpp  main.cpp  sensor-store.cpp  sensors.cpp
sensornet-server/src/: configHandler.ts  index.ts  myCORS.ts  packets.ts
sensornet/decode/: device.py  packet.py
sensornet/ui/: app.py
server/: requirements.txt
server/src/: struct_schema.py
src/: packet.py
telegraf/: telegraf.conf
test/: main.py
(+98 files in other folders)
